fixed bg visibility

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,6 @@
 /* *{
     color: #0062ff7e;
 } */
-body, html {
-   background-color: black;
-   overscroll-behavior-y: none;
-}
  ::-webkit-scrollbar{
     display: none;
  }
